[tool.poetry]
name = "lmdb"
version = "0.1.0"
description = ""
authors = ["dyeray <dyeray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
django-extensions = "^3.2.0"
Werkzeug = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
